--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">NTUHackathon2018</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Hackathon</string>
+    <string name="import_image">Import</string>
+    <string name="provider_authority">com.example.provider.ntuhackathon</string>
 </resources>
